# lib/api-spec/openapi.yaml
@@ -423,6 +423,8 @@ components:
           type: string
         subtitle:
           type: string
+        category:
+          type: string
         role:
           type: string
         focus:
@@ -486,6 +488,8 @@ components:
           type: string
         subtitle:
           type: string
+        category:
+          type: string
         role:
           type: string
         focus:
@@ -529,6 +533,8 @@ components:
         client:
           type: string
         subtitle:
+          type: string
+        category:
           type: string
         role:
           type: string
